--- a/src/Weather.css
+++ b/src/Weather.css
@@ -11,11 +11,15 @@ body {
   background-size: 100%;
 }
 
+.Weather {
+  background-color: rgba(148, 14, 70, 0.7);
+  padding: 15px;
+  width: 100%;
+}
+
 .container {
   border-radius: 10px;
-  margin: 0 auto;
-  padding: 15px;
-  background-color: rgba(148, 14, 70);
+
   color: white;
 }
 
@@ -29,9 +33,8 @@ body {
   height: 26px;
   border-radius: 4px;
   position: relative;
-  left: 160px;
-  top: -25px;
-
+  left: 130px;
+  top: -35px;
   border-color: rgb(238, 109, 163);
 }
 
@@ -44,8 +47,8 @@ body {
   border-radius: 4px;
   transition: all 200ms ease-in-out;
   position: relative;
-  left: 160px;
-  top: -25px;
+  left: 130px;
+  top: -35px;
 }
 
 h1 {
@@ -78,12 +81,11 @@ h1 {
 .current-temperature {
   font-size: 100px;
   font-weight: normal;
-  margin-left: 70px;
+  margin-left: 50px;
 }
 
 .units {
   font-size: 20px;
-
   vertical-align: 180%;
 }
 
@@ -100,23 +102,30 @@ h1 {
 #emoji-current-weather {
   width: 150px;
   height: 150px;
+  margin-right: 100px;
+  margin-top: -35px;
+}
+
+.imageForExample {
   float: right;
-  margin-top: -180px;
-  margin-right: 50px;
-  padding: none;
+  margin-top: -140px;
+  margin-right: 30px;
+  width: 100px;
+  height: 100px;
+  background-color: blue;
 }
 
 .current-weather-description {
   font-size: 20px;
   float: right;
-  margin-right: 100px;
+  margin-right: 50px;
   margin-top: -35px;
 }
 
 .updated {
   font-size: 13px;
   width: 50px 10px;
-  margin-left: 50px;
+  margin-left: 30px;
   margin-top: 150px;
 }
 
@@ -144,15 +153,17 @@ h1 {
 }
 
 .link-github {
-  color: white;
+  color: black;
   text-decoration: underline;
 }
 
 .open-source {
   font-size: 15px;
-  color: white;
 }
 
 .App footer {
   font-size: 15px;
+  color: white;
+  background-color: blueviolet;
+  font-style: italic;
 }
