--- a/src/Weather.css
+++ b/src/Weather.css
@@ -115,10 +115,10 @@ h1 {
   background-color: blue;
 }
 
-.current-weather-description {
+.text-capitalize {
   font-size: 20px;
   float: right;
-  margin-right: 50px;
+  margin-right: 20px;
   margin-top: -35px;
 }
 
