--- a/src/Weather.css
+++ b/src/Weather.css
@@ -106,9 +106,9 @@ h1 {
   margin-top: -35px;
 }
 
-.imageForExample {
+.iconImage {
   float: right;
-  margin-top: -140px;
+  margin-top: -160px;
   margin-right: 30px;
   width: 100px;
   height: 100px;
