--- a/src/Weather.css
+++ b/src/Weather.css
@@ -94,7 +94,7 @@ h1 {
 .iconImage {
   float: right;
   margin-top: -160px;
-  margin-right: 70px;
+  margin-right: 50px;
   width: 100px;
   height: 100px;
 }
@@ -102,8 +102,8 @@ h1 {
 .text-capitalize {
   font-size: 30px;
   float: right;
-  margin-right: 90px;
-  margin-top: -60px;
+  margin-top: -50px;
+  margin-right: 15px;
 }
 
 .updated {
@@ -136,18 +136,14 @@ h1 {
   text-align: center;
 }
 
-.link-github {
-  color: black;
+a {
+  color: white;
   text-decoration: underline;
 }
 
-.open-source {
-  font-size: 15px;
-}
-
 .App footer {
-  font-size: 15px;
+  font-size: 13px;
   color: white;
-  background-color: blueviolet;
+  background-color: rgba(148, 14, 70);
   font-style: italic;
 }
